--- a/sport_with_mimi/app/src/main/res/values/styles.xml
+++ b/sport_with_mimi/app/src/main/res/values/styles.xml
@@ -17,8 +17,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="ShapeAppearanceOverlay.MyApp.Button.Rounded" parent="">
-        <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">50%</item>
-    </style>
+<!--    <style name="ShapeAppearanceOverlay.MyApp.Button.Rounded" parent="">-->
+<!--        <item name="cornerFamily">rounded</item>-->
+<!--        <item name="cornerSize">50%</item>-->
+<!--    </style>-->
 </resources>
